--- a/css/FeedDisplay.css
+++ b/css/FeedDisplay.css
@@ -80,9 +80,10 @@ body {
     color: #0073e6;
 }
 
-input {
+textarea {
     outline: none;
     border: none;
+    resize: none;
 }
 
 .add-post-area {
@@ -93,11 +94,89 @@ input {
 .comment-input {
     width: 100%; /* Đặt độ rộng toàn phần */
     font-size: 18px; /* Tăng kích thước chữ */
-    padding: 10px; /* Tạo khoảng cách bên trong */
-    border-radius: 20px; /* Bo góc */
-    border: 1px solid #ccc; /* Đặt viền */
+    padding: 10px 10px 10px 0px; /* Tạo khoảng cách bên trong */
 }
 
 .post-block {
     width: 100%;
+}
+
+input {
+    outline: none;
+    border: none;
+    width: 100%;
+}
+
+
+
+
+
+
+
+
+
+#popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    padding: 10px;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
+    background: #fff;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: 100;
+}
+#popup.active {
+    visibility: visible;
+    opacity: 1;
+}
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease;
+    z-index: 99;
+}
+.overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+#heading-add-post {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10px 20px 10px;
+    border-bottom: 0.1px solid #ccc;
+}
+
+.hover-element {
+    cursor: pointer; /* Khi hover, con trỏ sẽ chuyển thành biểu tượng bàn tay */
+}
+
+#body-add-post {
+    padding: 20px;
+}
+
+.post-block {
+    width: 100%;
+}
+
+.post-block-popup {
+    height: 10rem;
+}
+
+.post-input {
+    width: 100%;
+    font-size: 18px;
+    margin-bottom: 20px;
+    height: 10rem;
 }
