--- a/css/FeedDisplay.css
+++ b/css/FeedDisplay.css
@@ -120,7 +120,7 @@ input {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 600px;
+    width: 100%;
     padding: 10px;
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
     background: #fff;
