--- a/css/notification.css
+++ b/css/notification.css
@@ -14,19 +14,76 @@ body {
     align-items: center;
     max-width: 600px;
     margin: 20px auto;
-    padding: 10px 10px;
+    padding: 15px 20px;
     background: white;
     border-radius: 10px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: 100%;
+    height: 1rem;;
+    margin-top: 10px;
+}
+
+.mark-read {
+    background: none;
+    border: none;
+    color: var(--primary-color);
+    cursor: pointer;
+    font-size: 0.95rem;
+}
+
+.notification-settings {
+    display: flex;
+    width: 100%;
+    border-bottom: 1px solid #e0e0e0;
+    margin-bottom: 10px;
+    margin-left: 5px;
+}
+
+.tab {
+    background: none;
+    border: none;
+    color: var(--secondary-text-color);
+    margin-right: 10px; 
+    font-size: 0.95rem;
+    cursor: pointer;
+}
+
+.tab.active {
+    font-weight: bold;
+    color: var(--primary-color);
+    position: relative;
+    padding: 10px 0;
+}
+
+.tab.active::after {
+    content: '';
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: var(--primary-color); 
+}
+
+.hidden {
+    display: none !important;
+}
+
 .notification-item {
     position: relative;
     display: flex;
-    align-items: center;
-    padding: 5px;
+    align-items: flex-start;
+    padding: 10px 5px;
     border-radius: 10px;
     width: 100%;
+    position: relative;
+    cursor: pointer;
 }
 
 .notification-item:hover .overlay {
@@ -44,12 +101,13 @@ body {
 }
 
 .profile-pic {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     overflow: hidden;
     margin-right: 15px;
     z-index: 2; 
+    flex-shrink: 0;
 }
 
 .profile-pic img {
@@ -58,18 +116,14 @@ body {
     object-fit: cover;
 }
 
-.notification-item {
-    position: relative;
-    cursor: pointer;
-}
-
 .notification-item::after {
     content: "";
     position: absolute;
-    right: 10px;
-    width: 10px;
-    height: 10px;
+    flex-shrink: 0;    
     background-color: var(--primary-color);
+    right: 5px;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
 }
 
@@ -82,6 +136,7 @@ body {
 }
 
 .notification-text {
+    max-width: calc(100% - 80px);
     flex-grow: 1;
     z-index: 2; 
 }
@@ -90,11 +145,33 @@ body {
     margin: 0;
     font-size: 0.9rem;
     justify-content: center;
-    align-items: center
+    align-items: center;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3; 
+    line-clamp: 3;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .notification-text .time {
     font-size: 0.9rem;
     color: var(--secondary-text-color);
     margin-top: 5px;
+}
+
+.post-pic {
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    overflow: hidden;
+    margin-right: 15px;
+    z-index: 2; 
+    flex-shrink: 0;
+}
+
+.post-pic img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
