--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,7 @@ body {
     --hover-background-color: rgba(0, 0, 0, 0.05);
     --new-notification: #DD2334;
 }
+
+h1 {
+    font-size: 1.25rem;
+}
