--- a/css/FeedDisplay.css
+++ b/css/FeedDisplay.css
@@ -209,18 +209,21 @@ input {
     background-color: #f0f0f0;
 }
 
-.file-name {
-    margin-left: 10px;
-    color: #666;
-    font-size: 14px;
-    display: flex;
-    align-items: center;
-    gap: 5px;
+.image-preview {
+    overflow: scroll;
 }
 
-.remove-file {
+.image-preview img {
+    width: auto;
+    height: 100%;
+    max-width: 100%;
+    border-radius: 4px;
+}
+
+.remove-image {
     cursor: pointer;
     color: #ff4444;
     font-weight: bold;
     padding: 0 5px;
+    position: absolute;
 }
