--- a/css/Post.css
+++ b/css/Post.css
@@ -92,3 +92,36 @@ input {
     outline: none;
     border: none;
 }
+
+.image-input { 
+    margin: 10px 0; 
+}
+
+.image-preview { 
+    max-width: 90%; 
+    margin: 10px 0; 
+    display: none; 
+    border-radius: 4px; 
+}
+.comment-wrapper { 
+    display: flex; 
+    flex-direction: column; 
+}
+
+.comment-image { 
+    max-width: 90%; 
+    border-radius: 4px; 
+    margin-top: 10px; 
+}
+
+#commentsContainer { 
+    display: flex; 
+    flex-direction: column; 
+    gap: 10px; 
+}
+
+.comment-section { 
+    display: flex; 
+    flex-direction: column; 
+    gap: 10px; 
+}
