--- a/css/Post.css
+++ b/css/Post.css
@@ -17,15 +17,15 @@ body {
     max-width: 600px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
-}
-
-.post, .comment {
     background-color: white;
     border-radius: 10px;
     padding: 15px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
+
+.comment {
+    padding: 10px 0px;
+} 
 
 .user-info {
     display: flex;
@@ -114,14 +114,7 @@ input {
     margin-top: 10px; 
 }
 
-#commentsContainer { 
-    display: flex; 
-    flex-direction: column; 
-    gap: 10px; 
+hr { 
+    margin: 20px 0; 
 }
 
-.comment-section { 
-    display: flex; 
-    flex-direction: column; 
-    gap: 10px; 
-}
