--- a/css/Post.css
+++ b/css/Post.css
@@ -21,6 +21,7 @@ body {
     border-radius: 10px;
     padding: 15px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    margin-top: 50px;
 }
 
 .comment {
@@ -118,3 +119,30 @@ hr {
     margin: 20px 0; 
 }
 
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px;
+    z-index: 100;
+  }
+  
+  .header a {
+    color: black;
+    text-decoration: none;
+  }
+  
+  .back-button {
+    display: flex;
+    align-items: center;
+  }
+  
+  .back-button i {
+    margin-right: 8px;
+  }
