add setting for each notification item

--- a/css/notification.css
+++ b/css/notification.css
@@ -1,3 +1,5 @@
+@import url("style.css");
+
 * {
     margin: 0;
     padding: 0;
@@ -50,12 +52,12 @@ header {
     border: none;
     color: var(--secondary-text-color);
     margin-right: 10px; 
-    font-size: 0.95rem;
+    font-size: 0.9rem;
     cursor: pointer;
+    font-weight: 600;
 }
 
 .tab.active {
-    font-weight: bold;
     color: var(--primary-color);
     position: relative;
     padding: 10px 0;
@@ -67,7 +69,8 @@ header {
     bottom: -1px;
     left: 0;
     width: 100%;
-    height: 1px;
+    border-radius: 16px ;
+    height: 2px;
     background-color: var(--primary-color); 
 }
 
@@ -80,14 +83,9 @@ header {
     display: flex;
     align-items: flex-start;
     padding: 10px 5px;
-    border-radius: 10px;
+    border-radius: var(--block-content-border-radius);
     width: 100%;
-    position: relative;
     cursor: pointer;
-}
-
-.notification-item:hover .overlay {
-    background: var(--hover-background-color);
 }
 
 .overlay {
@@ -96,8 +94,12 @@ header {
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 1;
+    z-index: 0;
     border-radius: 10px;
+}
+
+.notification-item:hover .overlay {
+    background: var(--hover-background-color);
 }
 
 .profile-pic {
@@ -119,12 +121,13 @@ header {
 .notification-item::after {
     content: "";
     position: absolute;
+    right: 8px;
     flex-shrink: 0;    
     background-color: var(--primary-color);
-    right: 5px;
     width: 8px;
     height: 8px;
     border-radius: 50%;
+    z-index: 1;
 }
 
 .notification-item[data-read="true"]::after {
@@ -165,7 +168,7 @@ header {
     height: 40px;
     border-radius: 5px;
     overflow: hidden;
-    margin-right: 15px;
+    margin-right: 10px;
     z-index: 2; 
     flex-shrink: 0;
 }
@@ -174,4 +177,74 @@ header {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.noti-setting-wrapper {
+    align-self: center;
+    position: relative;
+}
+
+.noti-setting-icon-wrapper {
+    margin-left: auto;
+    align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: transparent; 
+    cursor: pointer;
+    position: relative;
+    z-index: 3;
+}
+
+.noti-setting-icon-wrapper:hover {
+    background-color: rgba(0, 0, 0, 0.15);
+}
+
+.noti-setting-icon {
+    width: 20px;
+    height: 20px;
+}
+
+.noti-menu {
+    position: absolute;
+    top: 120%;
+    right: 0;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.15);
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    padding: 7px 0;
+    width: 150px;
+}
+
+.menu-item {
+    background: none;
+    border: none;
+    padding: 8px 15px;
+    text-align: left;
+    width: 100%;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+    display: flex;
+    align-items: center;
+}
+
+.menu-item:hover {
+    background-color: var(--hover-background-color);
+}
+
+.hidden {
+    display: none;
+}
+
+.setting-menu-icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+    padding-bottom: 3px;
 }
