--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,16 @@ body {
     --primary-color: #5865F2;
     --secondary-color: #BDB3F9;
     --background-color: #FAFAFA;
+    --button-primary-outline: rgba(0, 0, 0, 0.15);
     --hover-background-color: rgba(0, 0, 0, 0.05);
     --new-notification: #DD2334;
     --form-border-radius: 8px;
     --block-content-border-radius: 10px;
-}
+    --font-family-system: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}   
 
 h1 {
     font-size: 1.25rem;
+    font-weight: 600;
+    margin-bottom: 0;
 }
