--- a/css/notification.css
+++ b/css/notification.css
@@ -42,7 +42,7 @@ header {
 .notification-settings {
     display: flex;
     width: 100%;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid var(--outline);
     margin-bottom: 10px;
     margin-left: 5px;
 }
@@ -233,6 +233,7 @@ header {
     transition: background-color 0.2s ease;
     display: flex;
     align-items: center;
+    font-family: var(--font-family-system);
 }
 
 .menu-item:hover {
@@ -294,28 +295,4 @@ header {
     background-color: #f5f5f5;
     padding: 8px;
     border-radius: 8px;
-}
-
-/* Desktop Navigation */
-@media (min-width: 768px) {
-    .nav {
-        left: 0;
-        top: 0;
-        width: 70px;
-        height: 100vh;
-        border-top: none;
-        border-right: 1px solid #e0e0e0;
-    }
-
-    .nav-list {
-        flex-direction: column;
-        height: 100%;
-        padding-top: 20px;
-        gap: 20px;
-    }
-
-    .logo {
-        display: block;
-        margin-bottom: 30px;
-    }
 }
