--- a/css/search.css
+++ b/css/search.css
@@ -26,7 +26,7 @@ body {
 .search-settings {
     display: flex;
     width: 100%;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid var(--outline);
     margin-bottom: 10px;
     margin-left: 2px;
 }
@@ -159,4 +159,41 @@ header {
 
 .follow-btn.following {
     color: var(--secondary-text-color);
+}
+
+.form-control {
+    color: var(--secondary-text-color)
+}
+
+.form {
+    position: relative;
+    width: 100%;
+}
+
+.form .icon {
+    width: 22px;
+    height: 22px;
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%); 
+}
+
+.form-input {
+    font-size: 0.9rem;
+}
+
+.form-input::placeholder {
+    color: var(--secondary-text-color);
+    font-size: 0.9rem;
+}
+
+.form-input {
+    padding-left: 35px;
+    border-radius: 10px;
+}
+
+.form-input:focus{
+    box-shadow: none;
+    border: 2px solid var(--primary-color);
 }
