--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
 }
 
 :root {
+    --font-family-system: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --text-color: #000;
     --secondary-text-color: #B5B5B5;
     --primary-color: #5865F2;
@@ -10,10 +11,11 @@ body {
     --background-color: #FAFAFA;
     --button-primary-outline: rgba(0, 0, 0, 0.15);
     --hover-background-color: rgba(0, 0, 0, 0.05);
+    --outline: #e0e0e0;
     --new-notification: #DD2334;
     --form-border-radius: 8px;
     --block-content-border-radius: 10px;
-    --font-family-system: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --max-post-height: 420px;
 }   
 
 h1 {
