--- a/css/FeedDisplay.css
+++ b/css/FeedDisplay.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: var(--background-color);
     display: flex;
     justify-content: center;
     padding: 10px 20px 20px 20px;
@@ -130,7 +130,7 @@ body {
 }
 
 .actions button:hover {
-    color: #0078FF;
+    color: rgba(0, 0, 0, 0.3);
 }
 
 .actions .like-button {
@@ -275,44 +275,11 @@ textarea {
     position: fixed;
     bottom: 0;
     left: 0;
-    width: 100%;
-    background: white;
+    width: 100px;
+    display: flex;
+    background-color: white;
     border-top: 1px solid #e0e0e0;
     padding: 10px 0;
-}
-
-.nav-list {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    list-style: none;
-}
-
-.nav-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.nav-link {
-    text-decoration: none;
-    color: #666;
-    padding: 8px;
-    border-radius: 50%;
-    transition: all 0.3s ease;
-}
-
-.nav-link:hover {
-    color: #000;
-    background-color: #f5f5f5;
-}
-
-.nav-link.active {
-    color: #000;
-}
-
-.create-post {
-    background-color: #f5f5f5;
-    padding: 8px;
-    border-radius: 8px;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
 }
