--- a/css/navigation-bar.css
+++ b/css/navigation-bar.css
@@ -1,25 +1,155 @@
+.custom-nav-link {
+    color: var(--icon-secondary-outline);
+    text-decoration: none;
+    padding: 8px;
+    transition: all 0.3s ease;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.nav-item:hover {
+    background-color: #f5f5f5;
+    padding: 8px;
+    border-radius: 6px;
+}
+
+.nav-item .custom-nav-link.active .nav-icon path, 
+.nav-item .custom-nav-link.active .nav-icon circle,
+.nav-item .custom-nav-link.active .nav-icon line {
+    color: var(--primary-color);
+    fill: var(--primary-color);; 
+}
+
+.nav-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+
+.nav-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--hover-background-color);
+}
+
+.create-post {
+    background-color: #f5f5f5;
+    padding: 8px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.nav-item.create-post:hover {
+    --icon-secondary-outline: var(--primary-color);
+}
+
+.logo {
+    display: none;
+}
+
 @media (min-width: 768px) {
     .nav {
         left: 0;
         top: 0;
-        width: 70px;
+        width: 80px;
         height: 100vh;
-        border-top: none;
-        border-right: 1px solid #e0e0e0;
+        color: black;
+        justify-content: center;
+        background-color: white;
     }
 
     .nav-list {
         height: 100%;
-        display: flex;
+        display: inline-flex;
         flex-direction: column;
         justify-content: center;
         align-content: center;
-        padding-top: 20px;
-        gap: 20px;
+        color: black;
     }
 
     .logo {
         display: block;
-        margin-bottom: 30px;
+        position: absolute;
+        top: 10px;
+        left: 25px;
+
     }
+
+    .logo img {
+        width: 55%;
+    }
+
+    .nav-item {
+        width: 55px;
+        height: 40px;
+        margin: 5px 0;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .nav {
+        position: fixed;
+        bottom: 1px;
+        left: 0;
+        height: 8vh;
+        width: 100%;
+        color: black;
+        justify-content: center;
+        background-color: white;
+    }
+
+    .nav-list {
+        height: 100%;
+        display: inline-flex;
+        flex-direction: row;
+        justify-content: center;
+        align-content: center;
+        color: black;
+        gap: 30px;
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .nav-item {
+        width: 50px;
+        height: 40px;
+    }
+
+    .custom-nav-link {
+        text-decoration: none;
+        padding: 6px;
+        transition: all 0.3s ease;
+        border-radius: 8px;
+    }
+    
+    .nav-item:hover {
+        background-color: #f5f5f5;
+        padding: 6px;
+        border-radius: 6px;
+    }
+
+    .create-post {
+        border-radius: 8px;
+        cursor: pointer;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .nav-list {
+        height: 100%;
+        display: inline-flex;
+        flex-direction: row;
+        justify-content: center;
+        align-content: center;
+        color: black;
+        gap: 10px;
+    }
+
 }
