--- a/css/FeedDisplay.css
+++ b/css/FeedDisplay.css
@@ -21,9 +21,10 @@ body {
 }
 
 .post {
+    cursor: pointer;
     background-color: #fff;
     border-radius: var(--block-content-border-radius);
-    padding: 20px;
+    padding: 15px 20px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
 }
@@ -54,6 +55,15 @@ body {
 .post-info {
     font-family: var(--font-family-system) !important;
     font-size: 0.9rem;
+}
+
+.post-info a {
+    color: var(--primary-text-color);
+    text-decoration: none;
+}
+
+.post-info a:hover {
+    text-decoration: underline;
 }
 
 .post-info .time {
@@ -107,9 +117,9 @@ body {
 
 .actions {
     margin-left: 0;
+    padding: 0;
     display: flex;
     align-items: center;
-    padding: 10px 20px;
 }
 
 .actions button {
@@ -121,24 +131,34 @@ body {
     padding: 8px 12px;
     cursor: pointer;
     font-size: 18px;
-    color: #333;  
+    color: #4e4e4e;  
     transition: color 0.2s ease;
     font-family: var(--font-family-system);
-    font-size: 0.9rem;
+    font-size: 0.85rem;
+    border-radius: 20px;
 }
 
-.actions button:hover {
-    color: rgba(0, 0, 0, 0.3);
+.like-button-clicked svg path {
+    color: var(--new-notification);
+    fill: var(--new-notification)
 }
 
-.actions .like-button {
-    display: flex;
-    align-items: center;
+.like-button-clicked p {
+    color: var(--new-notification)
 }
 
 .actions .comment-button {
     display: flex;
     align-items: center;
+}
+
+.button:hover {
+    background-color: var(--hover-background-color);
+}
+
+.button p {
+    margin-left: 5px;
+    z-index: 10;
 }
 
 textarea {
@@ -147,9 +167,46 @@ textarea {
     resize: none;
 }
 
+
+.add-post {
+    cursor: pointer;
+    background-color: #fff;
+    border-radius: var(--block-content-border-radius);
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+
+    border-radius: var(--block-content-border-radius);
+    padding: 15px 20px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+}
+
+.add-post-block {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    margin-left: -10px;
+    padding-left: 10px;
+}
+
+.add-post-block:hover {
+    background-color: var(--hover-background-color);
+}
+
+.comment-input {
+    color: var(--secondary-text-color)
+}
+
+.add-post-user-info {
+    display: flex;
+    align-items: center;
+}
+
 .add-post-area {
     width: 100%;
     display: flex;
+    align-items: center;
 }
 
 .comment-input {
@@ -277,7 +334,7 @@ textarea {
     height: 40px;
     border-radius: 50%;
     overflow: hidden;
-    margin-right: 15px;
+    margin-right: 10px;
     margin-top: 3px;
     flex-shrink: 0;
 }
