--- a/css/search.css
+++ b/css/search.css
@@ -149,6 +149,12 @@ header {
     font-family: var(--font-family-system);
     background-color: transparent;
     z-index: 2;
+    color: var(--primary-color);
+}
+
+.follow-btn:hover {
+    background-color: var(--primary-color);
+    color: white;
 }
 
 .follow-btn p {
@@ -157,6 +163,7 @@ header {
 }
 
 .follow-btn.following {
+    background-color: transparent;
     color: var(--secondary-text-color);
 }
 
