--- a/css/Post.css
+++ b/css/Post.css
@@ -16,14 +16,22 @@ body {
     flex-direction: column;
     background-color: white;
     border-radius: 10px;
-    padding: 15px;
+    padding: 15px 20px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
     margin: 20px auto;
+    box-sizing: border-box;
 }
 
 .comment {
     padding: 10px 0px;
+    font-size: 0.9rem;
+    display: flex;
+    align-items: flex-start;
 } 
+
+.time {
+    color: var(--secondary-text-color);
+}
 
 .comment > .user-info {
     margin-bottom: 0px;
@@ -31,15 +39,31 @@ body {
 
 .user-info {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+}
+
+.user-post-info {
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.main-post-text {
+    width: 100%;
+    font-size: 0.9rem;
     margin-bottom: 10px;
 }
 
 .profile-pic {
+    margin-right: var(--block-content-border-radius);
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    margin-right: var(--block-content-border-radius);;
+    object-fit: cover;
+}
+
+.post {
+    border-bottom: 1px solid #e0e0e0;
+    padding-bottom: 10px;
 }
 
 .post-info {
@@ -71,7 +95,6 @@ body {
 .text {
     font-family: var(--font-family-system);
     font-size: 0.9rem;
-    margin-bottom: 10px;
 }
 
 .media {
@@ -106,7 +129,7 @@ body {
 }
 
 .actions {
-    margin-left: 0;
+    margin-left: 0px;
     padding: 0;
     display: flex;
     align-items: center;
@@ -126,6 +149,7 @@ body {
     font-family: var(--font-family-system);
     font-size: 0.85rem;
     border-radius: 20px;
+    z-index: 1;
 }
 
 .like-button-clicked svg path {
@@ -151,38 +175,86 @@ body {
     z-index: 10;
 }
 
+.comment-upload {
+    display: flex;
+    align-items: flex-start;
+}
+
+.comment-image {
+    height: auto;
+    max-width: 100%;
+    max-height: var(--max-post-height);
+    object-fit: contain;
+    border-radius: 8px;
+}
+
 .comment-block {
-    padding-left: 3.15rem;
+    flex: 1;
 }
 
-input {
+.comment-wrapper {
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+    box-sizing: border-box;
+}
+
+.comment-input-text {
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: var(--hover-background-color);
+    border: 2px solid transparent;
+    box-sizing: border-box;
+    overflow-y: hidden; 
+    resize: none; 
+    min-height: 40px;
+}
+
+/* .comment-input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 20px;
+    background-color: var(--hover-background-color);
+    border: 2px solid transparent;
+    box-sizing: border-box;
+} */
+
+.comment-input-text:focus {
+    border-color: var(--primary-color);
     outline: none;
+}
+
+.upload-image-comment-btn {
+    color: var(--secondary-text-color);
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+}
+
+.send-comment {
+    background: none;
+    cursor: pointer;
     border: none;
+    width: 22px;
+    height: 22px;
+    color: var(--secondary-text-color);
 }
 
-.image-input { 
-    margin: 10px 0; 
+.comment-wrapper textarea {
+    font-size: 0.9rem;
 }
 
-.image-preview { 
-    max-width: 90%; 
-    margin: 10px 0; 
-    display: none; 
-    border-radius: 4px; 
-}
-.comment-wrapper { 
-    display: flex; 
-    flex-direction: column; 
+.image-input {
+    display: none;
 }
 
-.comment-image { 
-    max-width: 90%; 
-    border-radius: 4px; 
-    margin-top: 10px; 
-}
-
-hr { 
-    margin: 20px 0; 
+.image-preview {
+    max-width: 90%;
+    margin-top: 10px;
+    border-radius: 8px;
+    display: none;
 }
 
 .nav {
@@ -194,4 +266,5 @@ hr {
     border-top: 1px solid #e0e0e0;
     padding: 10px 0;
     box-sizing: border-box;
+    z-index: 10;
 }
