--- a/css/SignIn.css
+++ b/css/SignIn.css
@@ -12,14 +12,45 @@
 
     
     height: 100vh;
-    background-color: red;
-    background-image: url("../Assets/image.png");
+    /* background-image: url("../images/logo.svg"); */
+    background: white;
+    position: relative;
+    
+    overflow-x: hidden;
+    
+    img {
+        /* width: 100%; */
+        /* height: 100%; */
+        max-width: 500px;
+        object-fit: cover;
+        margin: auto;
+        
+        top: 2rem;
+        left: 50%;
+        transform: translateX(-50%);
+        
+        position: absolute;
+    }
+}
+
+.main::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 300px;
+    height: 300px;
+    background-color: #5865f2;
+    border-radius: 50%;
+    filter: blur(100px);
+    transform: translate(-50%, -50%);
     background-size: cover;
 }
 
 .content {
+    z-index: 1;
     width: 100vw;
-    height: 50vh;
+    height: 60vh;
     background-color: var(--background-color);
     border-radius: 16px 16px 0 0;
     
@@ -31,7 +62,7 @@
     flex-direction: column;
     align-items: center;
     
-    width: 60%;
+    width: 80%;
     max-width: 500px;
     margin: 0 auto;
 }
