Update: rebalance the logo image

--- a/css/SignIn.css
+++ b/css/SignIn.css
@@ -26,7 +26,7 @@
         margin: auto;
         
         top: 2rem;
-        left: 50%;
+        left: calc(50% - 25px);
         transform: translateX(-50%);
         
         position: absolute;
