--- a/css/FeedDisplay.css
+++ b/css/FeedDisplay.css
@@ -11,13 +11,14 @@ body {
     background-color: var(--background-color);
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 
 .thread {
     display: flex;
     flex-direction: column;
     gap: 15px;
-    margin: 20px auto;
+    margin: 0 auto 5rem;
 }
 
 .post {
@@ -176,8 +177,9 @@ textarea {
     border-radius: var(--block-content-border-radius);
     box-sizing: border-box;
     display: flex;
+    flex-direction: column;
+    gap: 5px;
     align-items: center;
-
     border-radius: var(--block-content-border-radius);
     padding: 15px 20px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
@@ -406,6 +408,20 @@ textarea {
     border-radius: 50%;
 }
 
+.close-full-image {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 35px;
+    height: 35px;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 50%;
+    cursor: pointer;
+    color: var(--secondary-text-color);
+    z-index: 2;
+}
+
 .post-button {
     margin-left: auto;
     padding: 3px 10px;
@@ -430,10 +446,47 @@ textarea {
     position: fixed;
     bottom: 0;
     left: 0;
-    width: 100px;
+    width: 80px;
     display: flex;
     border-top: 1px solid #e0e0e0;
     padding: 10px 0;
     box-sizing: border-box;
     z-index: 10;
+}
+
+.row-2 {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.tab-post {
+    background: none;
+    border: none;
+    color: var(--secondary-text-color);
+    cursor: pointer;
+    font-size: 0.9rem;
+    font-weight: 600;
+    font-family: var(--font-family-system);
+    text-align: center;
+    width: 50%;
+}
+
+.tab-post.active {
+    color: var(--primary-color);
+    position: relative;
+    padding: 5px 0;
+}
+
+.tab-post.active::after {
+    content: '';
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    border-radius: 16px ;
+    height: 2px;
+    background-color: var(--primary-color); 
 }
