--- a/css/add-post.css
+++ b/css/add-post.css
@@ -175,6 +175,20 @@ textarea {
     border-radius: 50%;
 }
 
+.close-full-image {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 35px;
+    height: 35px;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 50%;
+    cursor: pointer;
+    color: var(--secondary-text-color);
+    z-index: 2;
+}
+
 .post-button {
     margin-left: auto;
     padding: 3px 10px;
