--- a/css/notification.css
+++ b/css/notification.css
@@ -14,7 +14,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px auto;
+    margin: 0 auto 5rem;
     padding: 15px 20px;
     background: white;
     border-radius: 10px;
