--- a/css/search.css
+++ b/css/search.css
@@ -8,17 +8,22 @@
 
 body {
     background-color: var(--background-color);
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto 5rem;
+    gap: 15px;
 }
 
 .search-page {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    margin: 20px auto;
-    padding: 15px 20px;
+    flex-direction: column;
+    padding: 15px 20px 7px;
     background: white;
     border-radius: 10px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    margin-top: -15px;
 }
 
 
@@ -214,7 +219,7 @@ header {
     position: fixed;
     bottom: 0;
     left: 0;
-    width: 100px;
+    width: 80px;
     display: flex;
     border-top: 1px solid #e0e0e0;
     padding: 10px 0;
