--- a/css/SignIn.css
+++ b/css/SignIn.css
@@ -13,7 +13,10 @@
     
     height: 100vh;
     /* background-image: url("../images/logo.svg"); */
-    background: white;
+    background-color: #FFFFFF;
+    background-image: radial-gradient(circle, #FFFFFF 40%, #c1cdfc 80%, #ff7575 120%);
+
+
     position: relative;
     
     overflow-x: hidden;
@@ -21,12 +24,12 @@
     img {
         /* width: 100%; */
         /* height: 100%; */
-        max-width: 500px;
+        max-width: 300px;
         object-fit: cover;
         margin: auto;
         
-        top: 2rem;
-        left: calc(50% - 25px);
+        top: 0.5rem;
+        left: calc(50% - 0.9rem);
         transform: translateX(-50%);
         
         position: absolute;
@@ -36,25 +39,28 @@
 .main::before {
     content: '';
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 50%;
     width: 300px;
     height: 300px;
-    background-color: #5865f2;
+    /* background-color: var(--primary-color);
     border-radius: 50%;
     filter: blur(100px);
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
     background-size: cover;
+}
+
+p a {
+    color: var(--primary-color);
 }
 
 .content {
     z-index: 1;
-    width: 100vw;
-    height: 60vh;
+    height: 75vh;
     background-color: var(--background-color);
     border-radius: 16px 16px 0 0;
     
-    box-shadow: 0px -6px 20px 20px rgba(0, 11, 56, 0.18);
+    box-shadow: 0px -6px 20px 5px rgba(0, 11, 56, 0.18);
 }
 
 .actual-content {
@@ -68,18 +74,25 @@
 }
 
 h2 {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     color: var(--primary-color);
-    
-    margin: 1rem 0 2rem 0;
+    font-weight: 600;
+    margin: 1rem 0 0.5rem 0;
+}
+
+h3 {
+    font-size: 0.95rem;
+    color: var(--secondary-text-color);
+    font-family: var(--font-family-system);
 }
 
 form {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: .5rem;
-    
+    gap: 1rem;
+    font-family: var(--font-family-system);
+    margin-top: 2rem;
     input {
         width: 100%;
         height: 2.5rem;
@@ -100,14 +113,51 @@ form {
         border-radius: 12px;
         
         color: white;
-        font-weight: bold;
-        
-        margin-top: 1rem;
+        font-weight: 600;
     }
 }
 
 p {
-    color: #5e697c;
+    font-family: var(--font-family-system);
+    font-size: 0.9rem;
+    color: var(--secondary-text-color);
     
     padding-top: 1rem;
+}
+
+.border-lable-flt {
+    position: relative;
+}
+
+.border-lable-flt label {
+    position: absolute;
+    top: -0.8rem; /* Cố định nhãn ở trên cùng */
+    left: 0.75rem;
+    background-color: #f8f9fa; /* Màu nền để che phần input nếu cần */
+    padding: 0 5px;
+    font-size: 0.85rem;
+    color: #5e697c;
+    z-index: 1;
+}
+
+.border-lable-flt .form-control {
+    width: 100%;
+    padding: 0.75rem;
+    padding-left: 1rem;
+    border: 1px solid #e0e4e9;
+    border-radius: 8px;
+    outline: none;
+    font-size: 0.9rem;
+    transition: border-color 0.3s ease;
+    height: 45px;
+}
+
+.border-lable-flt .form-control::placeholder {
+    font-family: var(--font-family-system);
+    color: var(--secondary-text-color);
+}
+
+.border-lable-flt .form-control:focus {
+    border-color: var(--primary-color);
+    box-shadow: 0 0 0 0.2rem rgba(52, 152, 219, 0.25); /* Màu viền khi focus */
 }
