--- a/css/FeedDisplay.css
+++ b/css/FeedDisplay.css
@@ -134,7 +134,7 @@ body {
     cursor: pointer;
     font-size: 18px;
     color: #4e4e4e;  
-    transition: color 0.2s ease;
+    transition: color 0.6s ease;
     font-family: var(--font-family-system);
     font-size: 0.85rem;
     border-radius: 20px;
@@ -157,6 +157,14 @@ body {
 
 .button:hover {
     background-color: var(--hover-background-color);
+}
+
+.button {
+    transition: all 0.3s ease;
+}
+
+.button:active {
+    transform: scale(0.9);
 }
 
 .button p {
