--- a/css/navigation-bar.css
+++ b/css/navigation-bar.css
@@ -15,6 +15,10 @@
     border-radius: 6px;
 }
 
+.nav-item:active {
+    transform: scale(0.9);
+}
+
 .nav-item .custom-nav-link.active .nav-icon path, 
 .nav-item .custom-nav-link.active .nav-icon circle,
 .nav-item .custom-nav-link.active .nav-icon line {
@@ -34,6 +38,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: all 0.3s ease;
 }
 
 .create-post {
@@ -56,6 +61,12 @@
 .logo img {
     height: 35px;
     width: 35px;
+    transition: all 0.3s ease;
+}
+
+.logo:active img {
+    opacity: 0.7;
+    transform: scale(0.9);
 }
 
 @media (min-width: 768px) {
