Udapte: convert more pages to handlebars

--- a/Pages/css/SignIn.css
+++ b/Pages/css/SignIn.css
@@ -1,5 +1,13 @@
 @import url("style.css");
 
+.button {
+    transition: all 0.3s ease;
+}
+
+.button:active {
+    transform: scale(0.9);
+}
+
 * {
     margin: 0;
     padding: 0;
