update handlebars for search and profile

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,8 +19,8 @@
     </div>
 </div>
 
-<link rel="stylesheet" href="./css/FeedDisplay.css">
-<script src="./script/FeedDisplay.js"></script>
+<link rel="stylesheet" href="/css/FeedDisplay.css">
+<script src="/script/FeedDisplay.js"></script>
 <script>
     function handleFormSubmit(event) {
         event.preventDefault();
