--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -9,15 +9,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="./images/favicon.svg">
-    <link rel="stylesheet" href="./css/page-header.css">
-    <link rel="stylesheet" href="./css/navigation-bar.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
+    <link rel="stylesheet" href="/css/page-header.css">
+    <link rel="stylesheet" href="/css/navigation-bar.css">
+    <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="/css/add-post.css">
 </head>
 <body>
     <nav class="nav">
         <div class="logo">
             <a href="#">
-                <img src="./images/favicon.svg">
+                <img src="/images/favicon.svg">
             </a>
         </div>
         <ul class="nav-list">
@@ -31,7 +33,7 @@
                 </li>
     
                 <li class="nav-item">
-                    <a href="./search.html" class="custom-nav-link {{#if (eq currentPath "/search")}}active{{/if}}">
+                    <a href="/search" class="custom-nav-link {{#if (eq currentPath "/search")}}active{{/if}}">
                         <svg viewBox="0 0 24 24" width="24" height="24" class="nav-icon">
                             <circle cx="11" cy="11" r="8" fill="none" stroke="currentColor" stroke-width="2"/>
                             <line x1="21" y1="21" x2="16.65" y2="16.65" stroke="currentColor" stroke-width="2"/>
@@ -49,7 +51,7 @@
                 </li>
     
                 <li class="nav-item">
-                    <a href="/notification" class="custom-nav-link {{#if (eq currentPath "/notification")}}active{{/if}}">
+                    <a href="/notifications" class="custom-nav-link {{#if (eq currentPath "/notifications")}}active{{/if}}">
                         <svg viewBox="0 0 24 24" width="24" height="24" class="nav-icon">
                             <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z" fill="none" stroke="currentColor" stroke-width="2"/>
                         </svg>
@@ -57,7 +59,7 @@
                 </li>
     
                 <li class="nav-item">
-                    <a href="/profile" class="custom-nav-link {{#if (eq currentPath "/profile")}}active{{/if}}">
+                    <a href="/profile/{{username}}" class="custom-nav-link {{#if (eq currentPath (concat "/profile/" username))}}active{{/if}}">
                         <svg viewBox="0 0 24 24" width="24" height="24" class="nav-icon">
                             <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2" fill="none" stroke="currentColor" stroke-width="2"/>
                             <circle cx="12" cy="7" r="4" fill="none" stroke="currentColor" stroke-width="2"/>
@@ -78,7 +80,7 @@
         <button class="page-back-button" onclick="goBack()">
             <svg width="24px" height="24px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" fill="currentColor" stroke="currentColor" stroke-width="19.456"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill="currentColor" d="M224 480h640a32 32 0 1 1 0 64H224a32 32 0 0 1 0-64z"></path><path fill="currentColor" d="m237.248 512 265.408 265.344a32 32 0 0 1-45.312 45.312l-288-288a32 32 0 0 1 0-45.312l288-288a32 32 0 1 1 45.312 45.312L237.248 512z"></path></g></svg>
         </button>
-        <img class="page-title" src="./images/logo.svg" onclick="scrollToTop()" style="cursor: pointer;">
+        <img class="page-title" src="/images/logo.svg" onclick="scrollToTop()" style="cursor: pointer;">
         <!-- <h2 class="page-title">Thread</h2> -->
         <div class="page-options" id="sign-out-btn-profile"> 
             <div class="sign-out-item">
@@ -130,9 +132,7 @@
         </form>
     </div>
 
-    <link rel="stylesheet" href="./css/style.css"/>
-    <link rel="stylesheet" href="./css/add-post.css">
-    <script src="./script/add-post.js"></script>
+    <script src="/script/add-post.js"></script>
     <script>
         function goBack() {
             window.history.back();
