--- a/views/notifications.hbs
+++ b/views/notifications.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./css/notification.css">
+<link rel="stylesheet" href="/css/notification.css">
 
 <main class="notifications col-11 col-md-8 col-lg-5 pe-3 ps-3">
     <header>
@@ -49,4 +49,4 @@
     </div>
 </main>  
 
-<script src="./script/notification.js"></script>
+<script src="/script/notification.js"></script>
