--- a/views/post.hbs
+++ b/views/post.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./css/Post.css">
+<link rel="stylesheet" href="/css/Post.css">
 
 <div class="thread col-11 col-md-8 col-lg-5">
     <!-- Post chính -->
@@ -6,7 +6,7 @@
         <div class="user-post-info">
             <img src="https://i.pinimg.com/736x/69/56/ff/6956ffc5caa89f3bb844c1ab7432739d.jpg" alt="User profile" class="profile-pic">
             <div class="post-info">
-                <a href="./otherProfile.html"><p class="username">travel.journey</p></a>
+                <a href="/profile/@username"><p class="username">travel.journey</p></a>
                 <span class="time">1w</span>
             </div>
         </div>
@@ -79,4 +79,4 @@
     </div>
 </div>
 
-<script src="./script/Post.js"></script>
+<script src="/script/Post.js"></script>
