--- a/Pages/css/style.css
+++ b/Pages/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
 }
 
 :root {
@@ -40,3 +40,7 @@ ol,
 ul {
   padding-left: 0rem;
 }
+
+/* button, input, optgroup, select, textarea {
+    font-family: var(--font-family-system) !important;
+} */
