--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -34,7 +34,7 @@
     
                 <li class="nav-item">
                     <a href="/search" class="custom-nav-link {{#if (eq currentPath "/search")}}active{{/if}}">
-                        <svg viewBox="0 0 24 24" width="24" height="24" class="nav-icon">
+                        <svg viewBox="0 0 24 24" width="24" height="24" class="nav-icon" id="nav-icon-search">
                             <circle cx="11" cy="11" r="8" fill="none" stroke="currentColor" stroke-width="2"/>
                             <line x1="21" y1="21" x2="16.65" y2="16.65" stroke="currentColor" stroke-width="2"/>
                         </svg>
@@ -59,7 +59,7 @@
                 </li>
     
                 <li class="nav-item">
-                    <a href="/profile/{{username}}" class="custom-nav-link {{#if (eq currentPath (concat "/profile/" username))}}active{{/if}}">
+                    <a href="/profile/{{username}}" class="custom-nav-link {{#if (eq currentPath (concat "/profile/" current_username))}}active{{/if}}">
                         <svg viewBox="0 0 24 24" width="24" height="24" class="nav-icon">
                             <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2" fill="none" stroke="currentColor" stroke-width="2"/>
                             <circle cx="12" cy="7" r="4" fill="none" stroke="currentColor" stroke-width="2"/>
