--- a/Pages/css/FeedDisplay.css
+++ b/Pages/css/FeedDisplay.css
@@ -472,12 +472,14 @@ textarea {
     font-family: var(--font-family-system);
     text-align: center;
     width: 50%;
+    padding: 5px 0;
+    border-bottom: 1px solid var(--outline);
+    text-decoration: none;
 }
 
 .tab-post.active {
     color: var(--primary-color);
     position: relative;
-    padding: 5px 0;
 }
 
 .tab-post.active::after {
