--- a/Pages/css/Post.css
+++ b/Pages/css/Post.css
@@ -287,6 +287,41 @@ body {
     display: none;
 }
 
+.image-preview {
+    position: relative;
+}
+
+.image-preview img {
+    width: auto;
+    max-width: 93%;
+    max-height: 100%;
+    border-radius: 4px;
+}
+
+.remove-image {
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 50%;
+}
+
+.close-full-image {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 35px;
+    height: 35px;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 50%;
+    cursor: pointer;
+    color: var(--secondary-text-color);
+    z-index: 2;
+}
+
 .nav {
     position: fixed;
     bottom: 0;
