--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,11 +11,56 @@
     </div>
     
     <div class="row-2 post">
-        <p class="tab-post active">From all users</p>
-        <p class="tab-post">From following users</p>
+        <a href="/" class="tab-post {{#if (eq currentPath "/")}}active{{/if}}">From all users</a>
+        <a href="/following" class="tab-post {{#if (eq currentPath "/following")}}active{{/if}}">From following users</a>
     </div>
     <div class="other-posts">
-        <!-- Posts will be added here -->
+        {{#each posts}}
+        <div class="post" onclick="window.location.href='/post/{{id}}'">
+            <div class="user-info">
+                <img src="{{author_id.profile_pic_url}}" alt="{{author_id.username}}" class="profile-pic">
+                <div class="post-info">
+                    <a href="/profile/{{author_id.username}}">
+                        <p class="username">{{author_id.username}}</p>
+                    </a>
+                    <span class="time">{{timeAgo}}</span>
+                </div>
+            </div>
+            <div class="content-wrapper">
+                <p class="text">{{content}}</p>
+                {{#if media.urls.length}}
+                <div class="media">
+                    <img src="{{media.urls.[0]}}" alt="Post media" class="post-image"  onclick="event.stopPropagation(); openFullscreen('{{id}}');">
+                </div>
+
+                <div class="modal" id="imageModal-{{id}}" onclick="event.stopPropagation();">
+                    <svg style="display: none;" id="closeButton-{{id}}" class="close-full-image" onclick="closeFullscreen('{{id}}')" fill="#fff" viewBox="-3.5 0 19 19" xmlns="http://www.w3.org/2000/svg">
+                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                        <g id="SVGRepo_iconCarrier">
+                            <path d="M11.383 13.644A1.03 1.03 0 0 1 9.928 15.1L6 11.172 2.072 15.1a1.03 1.03 0 1 1-1.455-1.456l3.928-3.928L.617 5.79a1.03 1.03 0 1 1 1.455-1.456L6 8.261l3.928-3.928a1.03 1.03 0 0 1 1.455 1.456L7.455 9.716z"></path>
+                        </g>
+                    </svg>
+                    <img src="{{media.urls.[0]}}" alt="Full Image" class="full-image">
+                </div>
+                {{/if}}
+            </div>
+            <div class="actions container text-center">
+                <button class="like-button button hover-icon" onclick="event.stopPropagation(); toggleLike(this)">
+                    <svg viewBox="0 0 24 24" width="18" height="18" class="nav-icon">
+                        <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z" fill="none" stroke="currentColor" stroke-width="2"></path>
+                    </svg>
+                    <p>{{likes.length}}</p>
+                </button>
+                <button class="comment-button button hover-icon">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 14.663 3.04094 17.0829 4.73812 18.875L2.72681 21.1705C2.44361 21.4937 2.67314 22 3.10288 22H12Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                    <p>{{comments.length}}</p>
+                </button>
+            </div>
+        </div>
+        {{/each}}
     </div>
 </div>
 
