--- a/views/post.hbs
+++ b/views/post.hbs
@@ -1,34 +1,33 @@
 <link rel="stylesheet" href="/css/Post.css">
 
 <div class="thread col-11 col-md-8 col-lg-5">
-    <!-- Post chính -->
+    {{#with post}}
     <div class="post">
         <div class="user-post-info">
-            <img src="https://i.pinimg.com/736x/69/56/ff/6956ffc5caa89f3bb844c1ab7432739d.jpg" alt="User profile" class="profile-pic">
+            <img src="{{author_id.profile_pic_url}}" alt="{{author_id.username}}" class="profile-pic">
             <div class="post-info">
-                <a href="/profile/@username"><p class="username">travel.journey</p></a>
-                <span class="time">1w</span>
+                <a href="/profile/{{author_id.username}}"><p class="username">{{author_id.username}}</p></a>
+                <span class="time">{{timeAgo}}</span>
             </div>
         </div>
         <div class="content-wrapper">
-            <p class="main-post-text">
-                Finally checked out Japan and luckily, no line! Verdict: super delicious, but not totally convinced it's worth the price point. What do you think?
-            </p>
-
+            <p class="main-post-text">{{content}}</p>
+            {{#if media.urls.length}}
             <div class="media">
-                <img src="https://i.pinimg.com/736x/47/55/ca/4755ca0523caf299505ae160c2a2ca8b.jpg" alt="Post image" class="post-image" onclick="openFullscreen(0)">
+                <img src="{{media.urls.[0]}}" alt="Post media" class="post-image" onclick="openFullscreen('{{id}}')">
             </div>
 
-            <div class="modal" id="imageModal-0">
-                <svg style="display: none;" id="closeButton-0" class="close-full-image" onclick="closeFullscreen(0)" fill="#fff" viewBox="-3.5 0 19 19" xmlns="http://www.w3.org/2000/svg">
+            <div class="modal" id="imageModal-{{id}}">
+                <svg style="display: none;" id="closeButton-{{id}}" class="close-full-image" onclick="closeFullscreen('{{id}}')" fill="#fff" viewBox="-3.5 0 19 19" xmlns="http://www.w3.org/2000/svg">
                     <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                     <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
                     <g id="SVGRepo_iconCarrier">
                         <path d="M11.383 13.644A1.03 1.03 0 0 1 9.928 15.1L6 11.172 2.072 15.1a1.03 1.03 0 1 1-1.455-1.456l3.928-3.928L.617 5.79a1.03 1.03 0 1 1 1.455-1.456L6 8.261l3.928-3.928a1.03 1.03 0 0 1 1.455 1.456L7.455 9.716z"></path>
                     </g>
                 </svg>
-                <img src="https://i.pinimg.com/736x/47/55/ca/4755ca0523caf299505ae160c2a2ca8b.jpg" alt="Full Image" class="full-image">
+                <img src="{{media.urls.[0]}}" alt="Full Image" class="full-image">
             </div>
+            {{/if}}
         </div>
         
         <div class="actions container text-center">
@@ -36,7 +35,7 @@
                 <svg viewBox="0 0 24 24" width="18" height="18" class="nav-icon">
                     <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z" fill="none" stroke="currentColor" stroke-width="2"></path>
                 </svg>
-                <p>2.9K</p>
+                <p>{{likes.length}}</p>
             </button>
             <button class="comment-button button hover-icon">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -44,10 +43,11 @@
                         <path d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 14.663 3.04094 17.0829 4.73812 18.875L2.72681 21.1705C2.44361 21.4937 2.67314 22 3.10288 22H12Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                     </g>
                 </svg> 
-                <p>17</p>
+                <p>{{comments.length}}</p>
             </button>
         </div>
     </div>
+    {{/with}}
 
     <div class="comment-section">
         <div class="comment-upload mb-2 mt-3">
